syntax = "proto3";

package mizer;

service ConnectionsApi {
  rpc GetConnections (GetConnectionsRequest) returns (Connections) {}

  rpc MonitorDmx (MonitorDmxRequest) returns (MonitorDmxResponse) {}

  rpc AddArtnetConnection (AddArtnetRequest) returns (Connections) {}
  rpc AddSacnConnection (AddSacnRequest) returns (Connections) {}

  rpc GetMidiDeviceProfiles (GetDeviceProfilesRequest) returns (MidiDeviceProfiles) {}
}

message MonitorDmxRequest {
  string outputId = 1;
}

message MonitorDmxResponse {
  repeated MonitorDmxUniverse universes = 1;
}

message MonitorDmxUniverse {
  uint32 universe = 1;
  bytes channels = 2;
}

message GetConnectionsRequest {}
message GetDeviceProfilesRequest {}

message AddArtnetRequest {
  string name = 1;
  string host = 2;
  uint32 port = 3;
}

message AddSacnRequest {
  string name = 1;
}

message Connections {
  repeated Connection connections = 1;
}

message Connection {
  string name = 1;
  oneof connection {
    DmxConnection dmx = 10;
    MidiConnection midi = 11;
    OscConnection osc = 12;
    ProDjLinkConnection proDJLink = 13;
    HeliosConnection helios = 14;
  }
}

message DmxConnection {
  string outputId = 1;
}

message HeliosConnection {
  string name = 1;
  string firmware = 2;
}

message MidiConnection {
  optional string device_profile = 1;
}

message MidiDeviceProfiles {
  repeated MidiDeviceProfile profiles = 1;
}

message MidiDeviceProfile {
  string id = 1;
  string manufacturer = 2;
  string model = 3;
  optional string layout = 4;
  repeated Page pages = 5;

  message Page {
    string name = 1;
    repeated Group groups = 2;
    repeated Control controls = 3;
  }

  message Group {
    string name = 1;
    repeated Control controls = 2;
  }

  message Control {
    string id = 1;
    string name = 2;
    uint32 channel = 3;
    uint32 note = 4;
    ControlType control_type = 5;
    bool has_output = 6;
  }

  enum ControlType {
    Note = 0;
    CC = 1;
  }
}

message OscConnection {
  uint32 input_port = 1;
  uint32 output_port = 2;
  string output_address = 3;
}

message ProDjLinkConnection {
  string address = 1;
  string model = 2;
  uint32 playerNumber = 3;
  CdjPlayback playback = 5;
}

message CdjPlayback {
  bool live = 1;
  double bpm = 2;
  uint32 frame = 3;
  State playback = 4;
  Track track = 5;

  enum State {
    Loading = 0;
    Playing = 1;
    Cued = 2;
    Cueing = 3;
  }

  message Track {
    string artist = 1;
    string title = 2;
  }
}
